# jamtronix

./: .gitignore  LICENSE  README.md  eval_corpus.example.toml  pyproject.toml  tuning.example.toml  tuning.toml
daw_templates/: JtxCCRack.adg  JtxParameterRouter.amxd  JtxParameterRouter.js  JtxParameterRouter.maxpat
docs/: ABLETON_SETUP.md  ARCHITECTURE.md  SPEC.md
docs/templates/: README.md  acid.md  deep_techno.md  psytrance.md
examples/: ableton.jtx-setup  acid-demo.jtx  acid-demo.jtx-setup  acid-starter.jtx  acid-starter.jtx-setup  deep-techno-demo.jtx  deep-techno-demo.jtx-setup  deep_techno-starter.jtx  deep_techno-starter.jtx-setup  engine-stress-test.jtx  engine_stress_test.jtx  phuture_test.jtx  psytrance-starter.jtx  psytrance-starter.jtx-setup  test-fixture.jtx  test-fixture.jtx-setup
jtx/: __init__.py  player.py  seed.py
jtx/algorithms/: __init__.py  _chords.py  _contours.py  _cycle.py  _euclid.py  _palettes.py  _phrase_shapes.py  _rhythm_templates.py  _steps.py  _subdivision.py  _theory.py  acid_bass.py  arp.py  cc_envelope.py  cc_lfo.py  drum_kit.py  drum_one_shot.py  drum_pattern.py  melodic_line.py  motif_phrase.py  noise_riser.py  reese_bass.py  reference.py  rest.py  step_cc.py  sub_drone.py  sustained_chord.py  voice_follower.py
jtx/composer/: __init__.py  compose.py  format.py  mood.py  recipe.py  sonics.py  titles.py  tuning.py  voices.py
jtx/engine/: __init__.py  algorithm.py  clock_source.py  context.py  events.py  feel.py  global_feel.py  lfo.py  meter.py  mix.py  osc_client.py  parameter_router.py  root_provider.py  scheduler.py  sink.py  voicing.py
jtx/evaluation/: __init__.py  __main__.py  descriptors.py  discriminability.py  scoring.py  sensitivity.py  structure.py  targets.py
jtx/improve/: __init__.py  __main__.py  corpus.py  determinism.py  driver.py  proposer.py  report.py  reward.py  safety.py
jtx/model/: __init__.py  composer_types.py  events.py  lfo.py  parameter_target.py  setup.py  song.py  types.py  validate.py
jtx/persist/: __init__.py  json_io.py
jtx/sinks/: __init__.py  _mido_convert.py  midifile.py  realtime.py
jtx_gui/: __init__.py  __main__.py  algorithm_meta.py  bundles.py  cc_functions.py  main_window.py  progressions.py  render.py  state.py  theme.py  transport.py
jtx_gui/views/: __init__.py  composer_view.py  live_view.py  new_song_wizard.py  parts_view.py  patcher_view.py  setup_editor.py  song_view.py  splash.py  toolbar.py
jtx_gui/widgets/: __init__.py  arrangement.py  arrangement_timeline.py  collapsible.py  global_feel_panel.py  knob.py  mood_pad.py  override.py  part_editor_panel.py
setups/: ableton-mpe.jtx-setup  ableton-osc.jtx-setup  ableton.jtx-setup  deep_techno.jtx-setup  iac.jtx-setup  jamtronix.jtx-setup  psytrance.jtx-setup
templates/: __init__.py  acid.py  blank.py  deep_techno.py  psytrance.py  wildcard.py
tests/: test_acid_bass.py  test_app_state.py  test_arrangement_timeline.py  test_bar_context_rng.py  test_bundled_songs.py  test_canonical_setup.py  test_chord_algorithms.py  test_clock.py  test_clock_modes.py  test_composer_compose.py  test_composer_determinism.py  test_composer_live_reroll.py  test_composer_palette.py  test_composer_recipe.py  test_composer_texture_motion.py  test_composer_titles.py  test_composer_tuning.py  test_drum_algorithms.py  test_drum_kit.py  test_engine_musicality.py  test_engine_stress.py  test_evaluation_cli.py  test_evaluation_descriptors.py  test_evaluation_discriminability.py  test_evaluation_scoring.py  test_evaluation_sensitivity.py  test_evaluation_structure.py  test_evaluation_targets.py  test_feel_pass.py  test_global_feel.py  test_gui_autostart.py  test_gui_smoke.py  test_improve_corpus.py  test_improve_determinism.py  test_improve_driver.py  test_improve_proposer.py  test_improve_reward.py  test_improve_safety.py  test_jtx_player_cli.py  test_knob_widget.py  (+24 more)
tools/: audition_tuning_ab.py  build_amxd.py  iac_smoke.py  jtx_player.py  midi_learn_helper.py
