[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jamtronix"
version = "0.1.0.dev0"
description = "macOS GUI MIDI jam tool for acid + deep techno (slackbeatz successor)"
readme = "README.md"
license = "MIT"
authors = [{ name = "Jonno Downes", email = "jonnosan@gmail.com" }]
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Topic :: Multimedia :: Sound/Audio :: MIDI",
    "Environment :: MacOS X :: Cocoa",
]
dependencies = [
    "mido>=1.3",
    "python-rtmidi>=1.5",
    "PySide6>=6.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.6",
    "mypy>=1.10",
]

[project.urls]
Homepage = "https://github.com/jonnosan/jamtronix"

[tool.hatch.build.targets.wheel]
packages = ["jtx", "jtx_gui"]

[tool.ruff]
target-version = "py312"
line-length = 100
extend-exclude = [".venv", "build", "dist"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true

[[tool.mypy.overrides]]
module = ["mido.*", "rtmidi.*"]
ignore_missing_imports = true
