[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jamtronix"
version = "0.1.0.dev0"
description = "macOS GUI MIDI jam tool for acid + deep techno (slackbeatz successor)"
readme = "README.md"
license = "MIT"
authors = [{ name = "Jonno Downes", email = "jonnosan@gmail.com" }]
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Topic :: Multimedia :: Sound/Audio :: MIDI",
    "Environment :: MacOS X :: Cocoa",
]
dependencies = [
    "mido>=1.3",
    "python-rtmidi>=1.5",
    "PySide6>=6.6",
    "python-osc>=1.8",
]

[project.optional-dependencies]
# Ableton Link binding. Optional because not every user wants Link;
# the rest of jtx (internal master + MIDI-clock slave) works without
# it. Install with: pip install 'jamtronix[link]'.
link = [
    "LinkPython-extern>=1.0",
]
dev = [
    "pytest>=8",
    "ruff>=0.6",
    "mypy>=1.10",
]

[project.scripts]
jtx-gui = "jtx_gui.__main__:main"

[project.urls]
Homepage = "https://github.com/jonnosan/jamtronix"

[tool.hatch.build.targets.wheel]
packages = ["jtx", "jtx_gui", "templates"]

# ----- briefcase packaging for the macOS .app bundle -----
# Run:
#   briefcase create macOS
#   briefcase build macOS
#   briefcase run macOS         # smoke-launch from the build dir
#   briefcase package macOS     # produce a redistributable .dmg
#
# Briefcase docs: https://briefcase.readthedocs.io/

[tool.briefcase]
project_name = "Jamtronix"
bundle = "io.github.jonnosan"
version = "0.1.0"
url = "https://github.com/jonnosan/jamtronix"
license.file = "LICENSE"
author = "Jonno Downes"
author_email = "jonnosan@gmail.com"

[tool.briefcase.app.jamtronix]
formal_name = "Jamtronix"
description = "macOS GUI MIDI jam tool for acid + deep techno"
long_description = """\
Jamtronix (jtx) is a macOS-only PySide6 MIDI jam tool optimised for
acid + deep techno workflows. MIDI-out only; talks to Ableton (or any
DAW) over IAC Bus.\
"""
sources = ["jtx", "jtx_gui", "templates"]
# Ship the bundled setups + starter songs alongside the .app.
resources = ["setups", "examples"]
test_sources = ["tests"]

requires = [
    "mido>=1.3",
    "python-rtmidi>=1.5",
]

[tool.briefcase.app.jamtronix.macOS]
universal_build = true
requires = [
    "PySide6>=6.6",
    "std-nslog~=1.0.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100
extend-exclude = [".venv", "build", "dist"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true

[[tool.mypy.overrides]]
module = ["mido.*", "rtmidi.*"]
ignore_missing_imports = true
